syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.imulab.astrea.sdk.client";
option java_outer_classname = "ClientProto";

package client;

message ClientLookupRequest {
    string id = 1;
}

message ClientLookupResponse {
    string id = 1;
    string name = 2;
    string type = 3;
    repeated string redirectUris = 4;
    repeated string responseTypes = 5;
    repeated string grantTypes = 6;
    repeated string scopes = 7;
    string applicationType = 8;
    repeated string contacts = 9;
    string logoUri = 10;
    string clientUri = 11;
    string policyUri = 12;
    string tosUri = 13;
    string jwks = 14;
    string sectorIdentifierUri = 15;
    string subjectType = 16;
    string idTokenSignedResponseAlgorithm = 17;
    string idTokenEncryptedResponseAlgorithm = 18;
    string idTokenEncryptedResponseEncoding = 19;
    string requestObjectSigningAlgorithm = 20;
    string requestObjectEncryptionAlgorithm = 21;
    string requestObjectEncryptionEncoding = 22;
    string userInfoSignedResponseAlgorithm = 23;
    string userInfoEncryptedResponseAlgorithm = 24;
    string userInfoEncryptedResponseEncoding = 25;
    string tokenEndpointAuthenticationMethod = 26;
    int64 defaultMaxAge = 28;
    bool requireAuthTime = 29;
    repeated string defaultAcrValues = 30;
    string initiateLoginUri = 31;
    repeated string requestUris = 32;
}

message ClientAuthenticateRequest {
    string id = 1;
    string secret = 2;
}

service ClientLookup {
    rpc Find(ClientLookupRequest) returns (ClientLookupResponse) {}
}

service ClientAuthentication {
    rpc Authenticate(ClientAuthenticateRequest) returns (ClientLookupResponse) {}
}